# mappings-sphere-disc-square

./: CMakeLists.txt  LICENSE  README  README.md  disk-square-analyzer.cpp  disk-square-common.hpp  disk-square-plotter.cpp  disk-square-precision-test.cpp  pdfplot.cpp  pdfplot.hpp  pngvis.cpp  sphere-map-analyzer.cpp  sphere-map-common.hpp  sphere-map-plotter.cpp  sphere-map-precision-test.cpp
libproj/: CMakeLists.txt  disk-square.cpp  disk-square.hpp  hemisphere-mix-lambert-stereographic.cpp  hemisphere-mix-lambert-stereographic.hpp  hemisphere-perspective.cpp  hemisphere-perspective.hpp  hemisphere-stereographic.cpp  hemisphere-stereographic.hpp  proj.cpp  proj.hpp  sphere-breusing-harmonic.cpp  sphere-breusing-harmonic.hpp  sphere-equidistant-azimuthal.cpp  sphere-equidistant-azimuthal.hpp  sphere-lambert-azimuthal-equal-area.cpp  sphere-lambert-azimuthal-equal-area.hpp
